...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_arrow_back_24"></ImageButton>

    <androidx.cardview.widget.CardView
        android:id="@+id/sujet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardElevation="8dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow_back_create_reunion">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginHorizontal="10dp"
            android:id="@+id/sujet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_subject_24"
            android:drawablePadding="5dp"
            android:textColor="@color/black"
            android:ems="10"
...
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/sujet_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/participants"
            android:layout_marginHorizontal="10dp"
            android:drawableLeft="@drawable/ic_participants_group_add_24"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
...
    android:layout_marginTop="20dp"
    android:id="@+id/date_picker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:datePickerMode="spinner"
    android:calendarViewShown="false"
    app:layout_constraintBottom_toTopOf="@id/fab_validate_reunion"
    app:layout_constraintTop_toBottomOf="@id/text_date"></DatePicker>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
...
