<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="20sp"
        android:padding="10dp"
        android:id="@+id/text_reunion_info1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sujet de la réunion = [.......]"
        android:textSize="20sp"></TextView>

    <TextView
        android:padding="10dp"
        android:id="@+id/text_reunion_info2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Salle de la réunion : [.....}"
        android:textSize="20sp"></TextView>

    <TextView
        android:padding="10dp"
        android:id="@+id/text_reunion_info3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Heure de la réunion : [...h...]"
        android:textSize="20sp"></TextView>

    <TextView
        android:padding="10dp"
        android:id="@+id/text_reunion_info4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Durée de la réunion : [...h...]"
        android:textSize="20sp"></TextView>

    <LinearLayout
        android:id="@+id/dialog_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:padding="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Participants : "
            android:textSize="20sp"></TextView>

    </LinearLayout>
</LinearLayout>