...
            android:layout_toRightOf="@id/filtre_button_date"
            android:text="filtrer salle" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reunion_list_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filtre_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/cell_reunion"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createReuFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/red"
        android:clickable="true"
...
